src/main/java/com/example/demo/error/exception/UnAuthorizedException.java
package com.example.demo.error.exception;

import com.example.demo.error.ErrorCode;
import lombok.Getter;


@Getter
public class UnAuthorizedException extends BusinessException {

  public UnAuthorizedException(String message, ErrorCode errorCode) {
    super(message,errorCode);
  }
}
